src/main/java/org/example/chatssecretos/domain/errors/ErrorAppUser.java
package org.example.chatssecretos.domain.errors;

public enum ErrorAppUser implements ErrorApp{
    USERNAME_NOT_AVAILABLE,
    NO_MATCHING_CREDENTIALS,
    PASSWORDS_NOT_MATCH,
    USUARIO_NO_EXISTE,
    CAMPOS_INCOMPLETOS, YA_ES_AMIGO
}
